--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
  <div class="row">
  <div class="left grid-1">
  <div class="card">
+<!-- Organization Type selector -->
+<div class="form-row">
+  <div class="field">
+    <div class="label">Organization Type</div>
+    <select id="orgType">
+      <option value="provider" selected>Provider / Agency</option>
+      <option value="hospital">Hospital</option>
+      <option value="mco">MCO</option>
+    </select>
+    <div class="tip">We’ll prefill assumptions and show relevant fields next.</div>
+  </div>
+</div>
  <h3>Tell Us About Your Agency</h3>
  <div class="form-row" style="grid-template-columns:1fr">
  <div class="field">
