--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
     <div class="tip">We’ll prefill assumptions and show relevant fields next.</div>
   </div>
 </div>
+<!-- State selector (step 2: UI only) -->
+<div class="form-row">
+  <div class="field">
+    <div class="label">State</div>
+    <select id="state">
+      <option value="US" selected>National (default)</option>
+      <option value="CO">Colorado</option>
+      <!-- add more states later -->
+    </select>
+    <div class="tip">We’ll use this later to prefill FMAP, PMPM, etc.</div>
+  </div>
+</div>  
  <h3>Tell Us About Your Agency</h3>
  <div class="form-row" style="grid-template-columns:1fr">
  <div class="field">
