--- a/index.html
+++ b/index.html
@@ -266,7 +266,11 @@
  <h5>Medicaid (State)</h5>
  <div class="small">Federal Funds Preserved</div>
  <div class="val" id="medicaidDollars">$0–$0</div>
- <div class="small">Assumes $7K–$10K annual spend; FMAP 50–70%; $200–$400 re-enrollment cost.</div>
+ <div class="small">
+  FMAP <span id="fmapLo">50</span>–<span id="fmapHi">70</span>%,
+  spend $<span id="spendLo">7000</span>–$<span id="spendHi">10000</span> per adult/yr.
+</div>
+
  </div>
  </div>
  </div>
