--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
  </div>
  <div class="field">
  <div class="label">Long-Term $ / YR</div>
- <input id="revLT" type="number" min="0" step="100" value="75000" />
+ <input id="revLT" type="number" min="0" step="100" value="90000" />
  <div class="tip">What is the average annual revenue of your long-term clients?</div>
  </div>
  </div>
@@ -187,7 +187,7 @@
  </div>
  <div class="field">
  <div class="label">Acute $ / YR</div>
- <input id="revAcute" type="number" min="0" step="100" value="17500" />
+ <input id="revAcute" type="number" min="0" step="100" value="20000" />
  <div class="tip">What is the average annual revenue of your acute / short-term clients?</div>
  </div>
  </div>
@@ -195,7 +195,7 @@
  <div class="form-row">
  <div class="field">
  <div class="label"># of Disenrolled</div>
- <input id="disCount" type="number" min="0" step="1" value="0" />
+ <input id="disCount" type="number" min="0" step="1" value="5" />
  <div class="tip">How many patients on average are disenrolled from Medicaid?</div>
  </div>
  <div class="field">
@@ -206,7 +206,7 @@
  <option value="month">per month</option>
  <option value="week">per week</option>
  </select>
- <div class="tip">Counts above are measured in this period.</div>
+ <div class="tip">Disenrollments are measured in this period.</div>
  </div>
  </div>
 
@@ -219,7 +219,7 @@
  <div class="field">
  <div class="label">Average Gap Duration</div>
  <input id="gapMonths" type="number" min="0" max="12" step="0.5" value="4.5" />
- <div class="tip">Avg gap for returners (months).</div>
+ <div class="tip">How many months does it usually take for reenrollment?</div>
  </div>
  </div>
 
