--- a/index.html
+++ b/index.html
@@ -237,8 +237,10 @@
  </div>
 
  <div class="divider"></div>
- <a class="btn" id="mailtoBtn" href="mailto:asya@AccessIQ.health?subject=AccessIQ%20Medicaid%20Impact%20Calculator">
-            Contact us to Transform Medicaid Access and Recapture Revenue
+ <a class="btn" id="mailtoBtn" 
+   style="font-size:12px; padding:10px 16px"
+   href="mailto:asya@AccessIQ.health?subject=AccessIQ%20Medicaid%20Impact%20Calculator">
+            Let's Transform Medicaid Access Together and Recapture Your Revenue!
  </a>
  <div class="sticky-note small">No inputs are stored or retained.</div>
  </div>
@@ -276,9 +278,9 @@
  <div class="tip">How many disenrollments you avoid.</div>
  </div>
  <div class="field">
- <div class="label">Annual Dollars to Keep</div>
+ <div class="label">Annual Revenue Recapture Target</div>
  <input id="targetDollars" type="number" min="0" step="1000" value="0" />
- <div class="tip">Or type a goal — we’ll show how many people.</div>
+ <div class="tip">Or type a revenue goal to see the # of clients to save</div>
  </div>
  </div>
 
@@ -305,7 +307,7 @@
  <div class="val" id="mcoMonths">0–0</div>
  <div class="small" id="mcoDollars">$0–$0</div>
  <div class="small" style="margin-top:6px">
-                  If a member never returns, impact extends over multiple years (≈3 years for long-term), resulting in higher cumulative preserved capitation.
+                  This shows the 12 month impact; in truth, when members dont return, the capitation impact spans multiple years
  </div>
  </div>
  </div>
