--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
  <div class="divider"></div>
  <a class="btn" id="mailtoBtn" 
    style="font-size:12px; padding:10px 16px"
-   href="mailto:asya@AccessIQ.health?subject=AccessIQ%20Medicaid%20Impact%20Calculator">
+   href="mailto:info@AccessIQ.health?subject=AccessIQ%20Medicaid%20Impact%20Calculator">
             Let's Transform Medicaid Access Together and Recapture Your Revenue!
  </a>
  <div class="sticky-note small">No inputs are stored or retained.</div>
