Changed asya@accessiq to info@accessIQ
CTA button mailto (top/right or wherever you put it)

href="mailto:info@AccessIQ.health?subject=AccessIQ%20Medicaid%20Impact%20Calculator"


(replace the current mailto:asya@AccessIQ.health?...)

Footer display + link

<a href="mailto:info@AccessIQ.health">info@Access<span class="iq">IQ</span>.health</a>


(replace the whole <a ...>asya@Access<span class="iq">IQ</span>.health</a> line)

JS that sets the mailto dynamically

$("mailtoBtn").href = `mailto:info@AccessIQ.health?subject=AccessIQ%20Medicaid%20Impact%20Calculator&body=${body}`;


(replace the asya@AccessIQ.health in that template string)

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
  </div>
  <div class="small" style="margin-top:8px">
  <a href="https://www.AccessIQ.health" target="_blank" rel="noopener">www.Access<span class="iq">IQ</span>.health</a>
-             • <a href="mailto:asya@AccessIQ.health">asya@Access<span class="iq">IQ</span>.health</a>
+             • <a href="mailto:info@AccessIQ.health">asya@Access<span class="iq">IQ</span>.health</a>
  </div>
  <div class="legal" style="margin-top:10px">
             This calculator is for illustrative planning only. No inputs are collected, stored, or transmitted. Calculations rely on user-provided figures and public benchmarks and are not financial advice. © <span id="yr"></span> AccessIQ. All rights reserved.
@@ -592,7 +592,7 @@ If we prevent ${fmt(ppl)} disenrollments:
 • Annual Medicaid (FMAP+admin) preserved: ${rangeMoney(medLow,medHigh)}
 
 Thank you!`);
-    $("mailtoBtn").href = `mailto:asya@AccessIQ.health?subject=AccessIQ%20Medicaid%20Impact%20Calculator&body=${body}`;
+    $("mailtoBtn").href = `mailto:info@AccessIQ.health?subject=AccessIQ%20Medicaid%20Impact%20Calculator&body=${body}`;
   }
   recalc();
 })();
