--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
  </div>
  <div class="small" style="margin-top:8px">
  <a href="https://www.AccessIQ.health" target="_blank" rel="noopener">www.Access<span class="iq">IQ</span>.health</a>
-             • <a href="mailto:info@AccessIQ.health">asya@Access<span class="iq">IQ</span>.health</a>
+             • <a href="mailto:info@AccessIQ.health">info@Access<span class="iq">IQ</span>.health</a>
  </div>
  <div class="legal" style="margin-top:10px">
             This calculator is for illustrative planning only. No inputs are collected, stored, or transmitted. Calculations rely on user-provided figures and public benchmarks and are not financial advice. © <span id="yr"></span> AccessIQ. All rights reserved.
