--- a/index.html
+++ b/index.html
@@ -824,5 +824,14 @@ if (orgSel){
   computeHospitalImpact();
 })();
 </script>
+<script>
+document.getElementById('orgType')?.addEventListener('change', function () {
+  if (this.value !== 'hospital' && typeof window.recalc === 'function') {
+    // kick Provider/Agency math on toggle back
+    setTimeout(window.recalc, 0);
+  }
+});
+</script>
+ 
 </body>
 </html>
